Bug 1471437 - Part 2: Reset mPaintRect only when the new building rect is different, and update mPaintRectValid when it is. r=mattwoodrow

MozReview-Commit-ID: 5djSr7eNk8W